@@ -5,6 +5,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -24,11 +25,16 @@ public class CorsConfig {
                 "http://localhost:*",
                 "http://127.0.0.1:*",
                 "https://*.github.io",
-                "file://*"
+                "file://*",
+                "https://*.railway.app",
+                "https://*.vercel.app"
         ));
         
-        // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
+        // Allow all headers including Authorization
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Origin", "Content-Type", "Accept", "Authorization", 
+                "X-Requested-With", "Cache-Control", "X-User-Id"
+        ));
         
         // Allow specific methods
         configuration.setAllowedMethods(Arrays.asList(
@@ -38,10 +44,18 @@ public class CorsConfig {
         // Allow credentials
         configuration.setAllowCredentials(true);
         
+        // Set max age for preflight requests
+        configuration.setMaxAge(3600L);
+        
         // Configure path mapping
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         
         return source;
+    }
+    
+    @Bean
+    public CorsFilter corsFilter() {
+        return new CorsFilter(corsConfigurationSource());
     }
 } 
